--- a/sw/templates/wakawaka/changes.html
+++ b/sw/templates/wakawaka/changes.html
@@ -3,6 +3,7 @@
 {% load breadcrumbs feature_tag %}
 {% load group_tags %}
 {% load i18n %}
+{% load sw_tags %}
 {% load wakawaka_tags %}
 
 {% block extrahead %}
@@ -14,8 +15,8 @@
 	{% endif %}
 
 	{# Add support for the Universal Edit Button #}
-	{% if perms.wakawaka.change_wikipage %}
-	<link rel="edit" title="{%trans "Edit this page" %}" href="{% groupurl wakawaka_edit group slug=page.slug %}" />
+	{% if user|canchangewikipage:page %}
+	    <link rel="edit" title="{%trans "Edit this page" %}" href="{% groupurl wakawaka_edit group slug=page.slug %}" />
 	{% endif %}
 {% endblock %}
 
