Use relative paths in CSS.

--- a/sw/media/css/base.css
+++ b/sw/media/css/base.css
@@ -16,148 +16,148 @@
     padding-left: 16px !important; }
 
 .bullet_blue-link {
-  background: transparent url("/media/icons/bullet_blue.png") left center no-repeat; }
+  background: transparent url("../icons/bullet_blue.png") left center no-repeat; }
 
 .bullet_blue-link-hover:hover {
-  background: transparent url("/media/icons/bullet_blue.png") left center no-repeat; }
+  background: transparent url("../icons/bullet_blue.png") left center no-repeat; }
 
 .bullet_go-link {
-  background: transparent url("/media/icons/bullet_go.png") left center no-repeat; }
+  background: transparent url("../icons/bullet_go.png") left center no-repeat; }
 
 .bullet_go-link-hover:hover {
-  background: transparent url("/media/icons/bullet_go.png") left center no-repeat; }
+  background: transparent url("../icons/bullet_go.png") left center no-repeat; }
 
 .bullet_yellow-link {
-  background: transparent url("/media/icons/bullet_yellow.png") left center no-repeat; }
+  background: transparent url("../icons/bullet_yellow.png") left center no-repeat; }
 
 .bullet_yellow-link-hover:hover {
-  background: transparent url("/media/icons/bullet_yellow.png") left center no-repeat; }
+  background: transparent url("../icons/bullet_yellow.png") left center no-repeat; }
 
 .calendar-link {
-  background: transparent url("/media/icons/calendar.png") left center no-repeat; }
+  background: transparent url("../icons/calendar.png") left center no-repeat; }
 
 .calendar-link-hover:hover {
-  background: transparent url("/media/icons/calendar.png") left center no-repeat; }
+  background: transparent url("../icons/calendar.png") left center no-repeat; }
 
 .dregni-event-link {
-  background: transparent url("/media/icons/calendar.png") left center no-repeat; }
+  background: transparent url("../icons/calendar.png") left center no-repeat; }
 
 .dregni-event-link-hover:hover {
-  background: transparent url("/media/icons/calendar.png") left center no-repeat; }
+  background: transparent url("../icons/calendar.png") left center no-repeat; }
 
 .door_in-link {
-  background: transparent url("/media/icons/door_in.png") left center no-repeat; }
+  background: transparent url("../icons/door_in.png") left center no-repeat; }
 
 .door_in-link-hover:hover {
-  background: transparent url("/media/icons/door_in.png") left center no-repeat; }
+  background: transparent url("../icons/door_in.png") left center no-repeat; }
 
 .email_edit-link {
-  background: transparent url("/media/icons/email_edit.png") left center no-repeat; }
+  background: transparent url("../icons/email_edit.png") left center no-repeat; }
 
 .email_edit-link-hover:hover {
-  background: transparent url("/media/icons/email_edit.png") left center no-repeat; }
+  background: transparent url("../icons/email_edit.png") left center no-repeat; }
 
 .eye-link {
-  background: transparent url("/media/icons/eye.png") left center no-repeat; }
+  background: transparent url("../icons/eye.png") left center no-repeat; }
 
 .eye-link-hover:hover {
-  background: transparent url("/media/icons/eye.png") left center no-repeat; }
+  background: transparent url("../icons/eye.png") left center no-repeat; }
 
 .folder-link {
-  background: transparent url("/media/icons/folder.png") left center no-repeat; }
+  background: transparent url("../icons/folder.png") left center no-repeat; }
 
 .folder-link-hover:hover {
-  background: transparent url("/media/icons/folder.png") left center no-repeat; }
+  background: transparent url("../icons/folder.png") left center no-repeat; }
 
 .group-link {
-  background: transparent url("/media/icons/group.png") left center no-repeat; }
+  background: transparent url("../icons/group.png") left center no-repeat; }
 
 .group-link-hover:hover {
-  background: transparent url("/media/icons/group.png") left center no-repeat; }
+  background: transparent url("../icons/group.png") left center no-repeat; }
 
 .teams-team-link {
-  background: transparent url("/media/icons/group.png") left center no-repeat; }
+  background: transparent url("../icons/group.png") left center no-repeat; }
 
 .teams-team-link-hover:hover {
-  background: transparent url("/media/icons/group.png") left center no-repeat; }
+  background: transparent url("../icons/group.png") left center no-repeat; }
 
 .group_link-link {
-  background: transparent url("/media/icons/group_link.png") left center no-repeat; }
+  background: transparent url("../icons/group_link.png") left center no-repeat; }
 
 .group_link-link-hover:hover {
-  background: transparent url("/media/icons/group_link.png") left center no-repeat; }
+  background: transparent url("../icons/group_link.png") left center no-repeat; }
 
 .key-link {
-  background: transparent url("/media/icons/key.png") left center no-repeat; }
+  background: transparent url("../icons/key.png") left center no-repeat; }
 
 .key-link-hover:hover {
-  background: transparent url("/media/icons/key.png") left center no-repeat; }
+  background: transparent url("../icons/key.png") left center no-repeat; }
 
 .lightning-link {
-  background: transparent url("/media/icons/lightning.png") left center no-repeat; }
+  background: transparent url("../icons/lightning.png") left center no-repeat; }
 
 .lightning-link-hover:hover {
-  background: transparent url("/media/icons/lightning.png") left center no-repeat; }
+  background: transparent url("../icons/lightning.png") left center no-repeat; }
 
 .page-link {
-  background: transparent url("/media/icons/page.png") left center no-repeat; }
+  background: transparent url("../icons/page.png") left center no-repeat; }
 
 .page-link-hover:hover {
-  background: transparent url("/media/icons/page.png") left center no-repeat; }
+  background: transparent url("../icons/page.png") left center no-repeat; }
 
 .pencil-link {
-  background: transparent url("/media/icons/pencil.png") left center no-repeat; }
+  background: transparent url("../icons/pencil.png") left center no-repeat; }
 
 .pencil-link-hover:hover {
-  background: transparent url("/media/icons/pencil.png") left center no-repeat; }
+  background: transparent url("../icons/pencil.png") left center no-repeat; }
 
 .plugin-link {
-  background: transparent url("/media/icons/plugin.png") left center no-repeat; }
+  background: transparent url("../icons/plugin.png") left center no-repeat; }
 
 .plugin-link-hover:hover {
-  background: transparent url("/media/icons/plugin.png") left center no-repeat; }
+  background: transparent url("../icons/plugin.png") left center no-repeat; }
 
 .plugin_edit-link {
-  background: transparent url("/media/icons/plugin_edit.png") left center no-repeat; }
+  background: transparent url("../icons/plugin_edit.png") left center no-repeat; }
 
 .plugin_edit-link-hover:hover {
-  background: transparent url("/media/icons/plugin_edit.png") left center no-repeat; }
+  background: transparent url("../icons/plugin_edit.png") left center no-repeat; }
 
 .sw-link {
-  background: transparent url("/media/icons/sw.png") left center no-repeat; }
+  background: transparent url("../icons/sw.png") left center no-repeat; }
 
 .sw-link-hover:hover {
-  background: transparent url("/media/icons/sw.png") left center no-repeat; }
+  background: transparent url("../icons/sw.png") left center no-repeat; }
 
 .user_go-link {
-  background: transparent url("/media/icons/user_go.png") left center no-repeat; }
+  background: transparent url("../icons/user_go.png") left center no-repeat; }
 
 .user_go-link-hover:hover {
-  background: transparent url("/media/icons/user_go.png") left center no-repeat; }
+  background: transparent url("../icons/user_go.png") left center no-repeat; }
 
 .user_green-link {
-  background: transparent url("/media/icons/user_green.png") left center no-repeat; }
+  background: transparent url("../icons/user_green.png") left center no-repeat; }
 
 .user_green-link-hover:hover {
-  background: transparent url("/media/icons/user_green.png") left center no-repeat; }
+  background: transparent url("../icons/user_green.png") left center no-repeat; }
 
 .vcard-link {
-  background: transparent url("/media/icons/vcard.png") left center no-repeat; }
+  background: transparent url("../icons/vcard.png") left center no-repeat; }
 
 .vcard-link-hover:hover {
-  background: transparent url("/media/icons/vcard.png") left center no-repeat; }
+  background: transparent url("../icons/vcard.png") left center no-repeat; }
 
 .auth-user-link {
-  background: transparent url("/media/icons/vcard.png") left center no-repeat; }
+  background: transparent url("../icons/vcard.png") left center no-repeat; }
 
 .auth-user-link-hover:hover {
-  background: transparent url("/media/icons/vcard.png") left center no-repeat; }
+  background: transparent url("../icons/vcard.png") left center no-repeat; }
 
 .vcard_edit-link {
-  background: transparent url("/media/icons/vcard_edit.png") left center no-repeat; }
+  background: transparent url("../icons/vcard_edit.png") left center no-repeat; }
 
 .vcard_edit-link-hover:hover {
-  background: transparent url("/media/icons/vcard_edit.png") left center no-repeat; }
+  background: transparent url("../icons/vcard_edit.png") left center no-repeat; }
 
 body {
   position: relative;
@@ -220,7 +220,7 @@ div#user-bar {
     padding-right: 10px; }
 
 .header {
-  background-image: url("/media/images/logos/logo-246x140.gif");
+  background-image: url("../images/logos/logo-246x140.gif");
   background-position: 5px;
   background-repeat: no-repeat;
   background-size: 246px 140px;
@@ -245,7 +245,7 @@ div#user-bar {
     z-index: -1; }
 
 .hq .header {
-  background-image: url("/media/images/logos/logo-123x70.gif");
+  background-image: url("../images/logos/logo-123x70.gif");
   background-size: 123px 70px;
   height: 70px;
   margin-top: 32px; }
@@ -515,7 +515,7 @@ ul#site-messages {
       padding-left: 1em; }
   #footer #actwithus-link {
     display: inline-block;
-    background: transparent url("/media/images/logos/actwithus.png") left bottom no-repeat;
+    background: transparent url("../images/logos/actwithus.png") left bottom no-repeat;
     background-size: 63px 16px;
     width: 63px;
     text-indent: -9999px; }
@@ -638,15 +638,15 @@ ul.socialaccount_providers {
       vertical-align: middle;
       text-indent: -9000px; }
       ul.socialaccount_providers li a.socialaccount_provider.local {
-        background: transparent url("/media/socialaccount/sw.png") left top no-repeat; }
+        background: transparent url("../socialaccount/sw.png") left top no-repeat; }
       ul.socialaccount_providers li a.socialaccount_provider.google {
-        background: transparent url("/media/socialaccount/google.png") left top no-repeat; }
+        background: transparent url("../socialaccount/google.png") left top no-repeat; }
       ul.socialaccount_providers li a.socialaccount_provider.twitter {
-        background: transparent url("/media/socialaccount/twitter.png") left top no-repeat; }
+        background: transparent url("../socialaccount/twitter.png") left top no-repeat; }
       ul.socialaccount_providers li a.socialaccount_provider.facebook {
-        background: transparent url("/media/socialaccount/facebook.png") left top no-repeat; }
+        background: transparent url("../socialaccount/facebook.png") left top no-repeat; }
       ul.socialaccount_providers li a.socialaccount_provider.yahoo {
-        background: transparent url("/media/socialaccount/yahoo.png") left top no-repeat; }
+        background: transparent url("../socialaccount/yahoo.png") left top no-repeat; }
 
 .wakacms-highlighted {
   background: #badafa; }
@@ -667,7 +667,7 @@ ul.socialaccount_providers {
   margin-bottom: 0; }
 
 #nags div {
-  background: #ffff8a url("/media/icons/exclamation.png") left center no-repeat;
+  background: #ffff8a url("../icons/exclamation.png") left center no-repeat;
   background-position-x: 10px;
   border-width: 1px 1px 3px 1px;
   border-color: #757500;
