Tab changes:  Support -> Tools;  Coordinators -> Events

--- a/sw/media/css/base.css
+++ b/sw/media/css/base.css
@@ -356,7 +356,7 @@ div#site-sections {
   background: #0b4f96;
   color: white; }
 
-.hq.support-section div#site-sections a#support-link {
+.hq.tools-section div#site-sections a#tools-link {
   background: #0b4f96;
   color: white; }
 
@@ -364,7 +364,7 @@ div#site-sections {
   background: #0b4f96;
   color: white; }
 
-.hq.coordinators-section div#site-sections a#coordinators-link {
+.hq.events-section div#site-sections a#events-link {
   background: #0b4f96;
   color: white; }
 
