--- a/sw/templates/sw/placeholders/tools.html
+++ b/sw/templates/sw/placeholders/tools.html
@@ -4,7 +4,7 @@
 {% load group_tags %}
 {% load wakacms_tags %}
 
-{% block body_class %}{{ block.super }} support-section{% endblock %}
+{% block body_class %}{{ block.super }} tools-section{% endblock %}
 
 {% block breadcrumbs %}
     {{ block.super }}
