--- a/sw/templates/dashboard/events.html
+++ b/sw/templates/dashboard/events.html
@@ -9,7 +9,7 @@
 
 {% block page_title %}HQ{% endblock %}
 
-{% block body_class %}{{ block.super }} hq-section{% endblock %}
+{% block body_class %}{{ block.super }} events-section{% endblock %}
 
 {% block breadcrumbs %}
     {{ block.super }}
