Use STATIC_URL not MEDIA_URL to refer to creole cheat sheet

--- a/sw/templates/wakawaka/edit.html
+++ b/sw/templates/wakawaka/edit.html
@@ -57,7 +57,7 @@
         </div>
         <div class="grid_4 omega">
             {# creole cheatsheet #}
-            <img style="float:right;" src="{{ MEDIA_URL }}wiki/creole_cheat_sheet.png" width="275" height="469" alt="Creole Cheat Sheet">
+            <img style="float:right;" src="{{ STATIC_URL }}wiki/creole_cheat_sheet.png" width="275" height="469" alt="Creole Cheat Sheet">
         </div>
 
 	{% else %}
