--- a/sw/templates/base.html
+++ b/sw/templates/base.html
@@ -12,6 +12,10 @@
     <link href="{{ STATIC_URL }}css/text.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/960.css" rel="stylesheet">
 
+    {# jQuery UI #}
+    {# http://bit.ly/swhq-theme-1 #}
+    <link href="{{ STATIC_URL }}css/swhq-theme/jquery-ui-1.8.8.custom.css?{{ MEDIA_SERIAL_NUMBER }}" rel="stylesheet">
+
     {# Uni-form #}
     <link href="{{ STATIC_URL }}uni_form/uni-form-generic.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}uni_form/uni-form.css" rel="stylesheet">
