Make sure user information is properly included in digest emails

--- a/sw/templates/dashboard/digest_html.html
+++ b/sw/templates/dashboard/digest_html.html
@@ -11,6 +11,11 @@
             <li><strong>{{ start_date }}</strong> - <strong>{{ end_date }}</strong></li>
         </ul>
         <p>
+            Thank you for your bringing your grassroots volunteer effort to
+            Sensible Washington!
+            Here is a summary of recent activity in teams you've joined.
+        </p>
+        <p>
             This email is automatically generated, and was requested by you.
             Please do not reply directly to this email.
         </p>
