--- a/sw/templates/teams/member_table.html
+++ b/sw/templates/teams/member_table.html
@@ -1,31 +1,14 @@
 {% load sw_tags %}
 <table width="100%">
     <thead>
-        <tr>
-            <th>Name</th>
-            <th>Profile Summary</th>
-        </tr>
+        {% include "idios/profiles_table_header_row.html" %}
     </thead>
     <tbody>
         {% for member in member_list %}
             {% with member.user as otheruser %}
-                <tr>
-                    <td width="20%">
-                        <a href="{{ otheruser.get_absolute_url }}">{{ otheruser.get_profile }}</a>
-                    </td>
-                    <td>
-                        {% if user|canview_bio_ofuser:otheruser %}
-                            {% with otheruser.get_profile.bio as bio %}
-                                {% if bio %}
-                                    <div>
-                                        <strong>Bio</strong>: {{ otheruser.get_profile.bio|truncatewords:25 }}
-                                        <a href="{{ otheruser.get_absolute_url }}">(read more)</a>
-                                    </div>
-                                {% endif %}
-                            {% endwith %}
-                        {% endif %}
-                    </td>
-                </tr>
+                {% with otheruser.get_profile as p %}
+                    {% include "idios/profiles_table_row.html" %}
+                {% endwith %}
             {% endwith %}
         {% endfor %}
     </tbody>
