--- a/sw/templates/idios/profiles_table_header_row.html
+++ b/sw/templates/idios/profiles_table_header_row.html
@@ -1,6 +1,5 @@
 <tr>
-    <th>Profile</th>
-    <th>Location</th>
+    <th>Profile &amp; Location</th>
     <th>Bio &amp; Contact</th>
     <th>Joined</th>
 </tr>
